--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kitty_Pokedex</string>
+    <string name="api_key">38738ba52fa1257fc59cf39ef7183571aca6630c</string>
 </resources>
