Database fully communicating with Android. Name and info only display for now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Kitty_Pokedex</string>
     <string name="api_key">38738ba52fa1257fc59cf39ef7183571aca6630c</string>
+    <string name="title_activity_breed_information">BreedInformationActivity</string>
+    <string name="test_breed_info">Maine Coons are highly intelligent, calm, and people-oriented cats.
+        This breed gets along well with children and other pets. Some follow their owners around the house and may even
+        enjoy playing with water or playing fetch. Maine Coons make great companions for first-time cat owners, singles,
+        families, and those with other pets. Understanding their unique needs will help keep them healthy and create a
+        strong bond between the two of you.</string>
 </resources>
