Updatd main screen   - Center aligned buttons   - Added a Credits button   = Updated .gitignore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="grooming">Grooming:\t</string>
     <string name="fur_length">Fur Length:\t</string>
     <string name="training">Training:\t</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="credits">Credits</string>
 </resources>
